fixed overflow

--- a/src/Components/AboutUs/FAQ/FAQ.module.css
+++ b/src/Components/AboutUs/FAQ/FAQ.module.css
@@ -4,6 +4,10 @@
   overflow: hidden;
 }
 
+.faq_aboutus {
+  overflow: visible;
+}
+
 .faq::before {
   position: absolute;
   content: '';
